# motor-curve-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_kr.md  authoring.js  binary_to_header.py  full_log.txt  full_log_v102.txt  full_log_v103.txt  imgui.ini  index.html  main.cpp  main.js  make_icon.sh  optimize-binaries.sh  package-lock.json  package.json  preload.js  webpack.config.prod.js  windows_toolchain.cmake
.github/workflows/: build.yml  release.yml
.sisyphus/drafts/: motor-curve-generator.md
.sisyphus/plans/: motor-curve-generator.md
css/: style.css
js/: chart.js  codeGen.js  language.js  main.js
partials/: chart.html  controls.html  header.html
